  BF: HTTP(S) - Content Types: Correction of xml/xsl/xslt to use application/xslt+xml
  BF: HTTP(S) - Request: Correction of the request validation
      In some cases the request is aborted with status 400 when the network connector is busy,
      because the worker assumed that no data is being sent.
      Statuses 408 and 413 may have been overwritten with status 400.
  CR: Project: Automatic update of the version in README.md
  CR: Build: Harmonization when updating the version
  CR: HTTP(S) - Status: Added option [H] (Header Only)
      The option is used in devwex.ini section STATUSCODES and indicates a status,
      so that requests with this status are answered only with a header and without body.
  CR: HTTP(S) - CGI: Not allowed/configured methods are now answered with status 405
      Previously the requests were answered with status 403.
  CR: HTTP(S) - CGI: Update of the PHP preparation
  CR: HTTP(S) - CGI: Change of the option [P] to [D]
  CR: HTTP(S) - Directory Index: Optimization / reduction of code
      Generation of the file list in the Generator instead of the Worker.
  CR: Worker: Optimization / reduction of code
  CR: Remote: Optimization / reduction of code
  CR: Sources: Update of the comment format

5.2.0 20190502
  BF: HTTP(S) Correction
      - Basic Authentication / Digest Access Authentication: rules are used again case-insentive
  BF: Generator: Correction when rendering successive placeholders #[...]#[...]
  BF: HTTP(S) - Request: Optimization/correction for invalid requests/connections without data streams
  CR: Generator: Optimization / Review
      - Optimization: Handling of segments/scopes/fragements
        Improvement of dedicated and partial use
      - Omission of namespaces, replacement by the dedicated/partial use of segments
      - Change of syntax, omission of character ':' for segments   
        old: #[foo:[[...]]], new: #[foo[[...]]]
      - Enhancement by a deep/recursive processing of Hashtable + Collections  