@@ -5,6 +5,7 @@
       In some cases the request is aborted with status 400 when the network connector is busy,
       because the worker assumed that no data is being sent.
       Statuses 408 and 413 may have been overwritten with status 400.
+  BF: Manual: Correction for chrome-based browsers
   CR: Project: Automatic update of the version in README.md
   CR: Build: Harmonization when updating the version
   CR: HTTP(S) - Status: Added option [H] (Header Only)
